# watchdog

./: .gitignore  Cargo.toml  LICENSE.md  README.md  install.sh  sample.config.toml
.github/workflows/: test.yml
install/: curl-install.sh  edit-sshd-config.py  install.sh  pam-install-ssh.py  pam-install-su.py  pam-install-sudo.py
src/: auth.rs  config.rs  environment.rs  init.rs  keyhouse.rs  lib.rs  main.rs  notifier.rs  slack.rs  ssh.rs  su.rs  sudo.rs  utils.rs
src/auth_keys_cmd/: main.rs
src/lib/: config.rs  environment.rs  keyhouse.rs  lib.rs  notifier.rs  utils.rs
src/ssh/: main.rs
src/su/: main.rs
src/sudo/: main.rs
