[package]
name = "watchdog"
version = "0.1.0"
authors = ["Kanav Gupta <kanav0610@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.99"
serde_json = "1.0.40"
toml = "0.5.3"
reqwest = "0.9.20"
base64 = "0.10.1"
rust-crypto = "0.2.36"
simplelog = "^0.7.3"
log = "^0.4.8"
clap = "2.19"
error-chain="0.12.1"

[[ bin ]]
name = "watchdog"
path = "src/main.rs"

[lib]
name = "common_lib"
path = "src/lib.rs"